add details for tasks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <div id="app"></div>
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span id="close">&times;</span>
+    <textarea id="Description" placeholder="Description" name="" id="" cols="30" rows="10"></textarea>
+    <textarea id="Coments" placeholder="Coments" name="" id="" cols="30" rows="10"></textarea>
+  </div>
+
+</div>
 
     
 </body>
