--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+  <button id = "clear">clear</button>
     <div id="app"></div>
 <div id="myModal" class="modal">
 
