--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <textarea id="Description" placeholder="Description" name="" id="" cols="30" rows="10"></textarea>
     <textarea id="Coments" placeholder="Coments" name="" id="" cols="30" rows="10"></textarea>
   </div>
-
 </div>
 
-    
+<button id="save">Save</button>
+<button id="clear">Clear</button>
 </body>
 <script type="module" src="./index.js"></script>
 </html>
